plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}
run {
    jvmArgs = ['--module-path', 'path/to/javafx-sdk/lib', '--add-modules', 'javafx.controls,javafx.fxml,javafx.swing,javafx.web']
}
group 'agdv'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
compileJava {
    options.compilerArgs.add('--add-modules')
    options.compilerArgs.add('java.desktop')
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'agdv'
    mainClass = 'agdv.Main'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
        implementation 'org.openjfx:javafx:17'
        implementation 'org.openjfx:javafx-controls:17'
        implementation 'org.openjfx:javafx-graphics:17'
        implementation 'org.openjfx:javafx-swing:17'
        implementation 'org.openjfx:javafx-web:17'
    implementation("com.squareup.retrofit2:retrofit:2.9.0")
    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation "org.openjfx:javafx-swing:17.0.2:win"
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}